--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Error - SemiAuto Classification{% endblock %}
+{% block title %}Error - SemiAuto Clustering{% endblock %}
 
 {% block extra_css %}
 <style>
